clusters/rainbow/apps/sonarr/istio-config.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sonarr-gateway
  namespace: vpn
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.tuckerthomas.local"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sonarr
  namespace: vpn
spec:
  hosts:
  - "sonarr.tuckerthomas.local"
  gateways:
  - sonarr-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8989
        host: sonarr.vpn.svc.cluster.local
